--- a/back-end/1 - Application/DesafioCnab.Application/DesafioCnab.Application.csproj
+++ b/back-end/1 - Application/DesafioCnab.Application/DesafioCnab.Application.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\2 - Domain\DesafioCnab.Domain\DesafioCnab.Domain.csproj" />
     <ProjectReference Include="..\..\3 - Service\DesafioCnab.Service\DesafioCnab.Service.csproj" />
   </ItemGroup>
