Salvando registros no banco, remoção de arquivos do projeto clonado.

--- a/back-end/1 - Application/DesafioCnab.Application/appsettings.Development.json
+++ b/back-end/1 - Application/DesafioCnab.Application/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionString": {
-    "DesafioCnabDB": "Server=localhost,1433;Database=DesafioCnab;User Id=sa;Password=abc12345;"
+    "DesafioCnabDB": "Server=(localdb)\\MSSQLLocalDB;Database=DesafioCnab;Integrated Security=True;"
   }
 }
