--- a/back-end/4 - Infra/DesafioCnab.Infra.Data/DesafioCnab.Infra.Data.csproj
+++ b/back-end/4 - Infra/DesafioCnab.Infra.Data/DesafioCnab.Infra.Data.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
       <PrivateAssets>all</PrivateAssets>
