Configurações para rodar via docker-compose

--- a/back-end/1 - Application/DesafioCnab.Application/DesafioCnab.Application.csproj
+++ b/back-end/1 - Application/DesafioCnab.Application/DesafioCnab.Application.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <InvariantGlobalization>false</InvariantGlobalization>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="wwwroot\**" />
     <Content Remove="wwwroot\**" />
