Resolução do problema de conexão com o banco no Docker.

--- a/back-end/1 - Application/DesafioCnab.Application/appsettings.json
+++ b/back-end/1 - Application/DesafioCnab.Application/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionString": {
-    "DesafioCnabDB": "Server=desafiocnab-sqlserver;Database=DesafioCnab;User Id=sa;Password=SQLServer@123;"
+    "DesafioCnabDB": "Server=desafiocnab-sqlserver;Database=DesafioCnab;User Id=sa;Password=SQLServer@123;TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
