--- a/back-end/5 - Test/DesafioCnab.Test/DesafioCnab.Test.csproj
+++ b/back-end/5 - Test/DesafioCnab.Test/DesafioCnab.Test.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,7 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\1 - Application\DesafioCnab.Application\DesafioCnab.Application.csproj" />
     <ProjectReference Include="..\..\2 - Domain\DesafioCnab.Domain\DesafioCnab.Domain.csproj" />
+    <ProjectReference Include="..\..\3 - Service\DesafioCnab.Service\DesafioCnab.Service.csproj" />
+    <ProjectReference Include="..\..\4 - Infra\DesafioCnab.Infra.Data\DesafioCnab.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
